[dev] added handlebars, api routes and public js

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,31 @@
-<div class="row justify-space-between-md">
-  <div class="login-card">
-    <h2 class="page-title">Login</h2>
+<!--Login-->
+<div class="row">
+  <div class="w-50 col-md-8 mx-auto">
+    <h2 id="page-title">Login Page</h2>
+
     <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+
+      <div class="form-group mt-3">
+        <label for="username-login">Username:</label>
+        <input class="form-input" type="text" id="username-login" />
       </div>
-      <div class="form-group">
+
+      <div class="form-group mt-3">
         <label for="password-login">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
-</div>
 
-<script src="./js/login.js"></script>
+      <div class="form-group mt-3">
+        <button id="login" class="btn btn-primary" type="submit">Login</button>
+      </div>
+
+    </form>
+
+    <div>
+      <br>
+      <a href="/signup">Register here!</a>
+    </div>
+
+  </div>
+
+  <script src="./js/login.js"></script>
